--- a/index.html
+++ b/index.html
@@ -112,6 +112,66 @@
                 <div class="col-md-9">
                     <h2 class="mb-3">最近更新文章</h2>
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-14">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-14-free-v2ray.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月14日18.5M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/105f920c4a52c86168fd60611ecae2fe.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-14-free-v2ray.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月14日18.5M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、美国、日本、欧洲、新加坡、韩国、加拿大等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-13">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-13-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月13日19.9M/S|免费VPN/Shadowrocket/Clash/SSR/V2ray免费节点订阅分享" src="/uploads/20241222-1/35f2ca1dcee5e084eaf1ccbd9a4339cc.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-13-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月13日19.9M/S|免费VPN/Shadowrocket/Clash/SSR/V2ray免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了新加坡、加拿大、美国、日本、韩国、香港、欧洲等地区,最高速度可达19.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-12">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-12-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月12日18.9M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享" src="/uploads/20241222-1/321988b62eb0968a443ca3848a3f071f.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-12-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月12日18.9M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了韩国、新加坡、日本、加拿大、美国、香港、欧洲等地区,最高速度可达18.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-11">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-11-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月11日18.1M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享" src="/uploads/20241222-1/c3c6a54ea49b309f84ab33c220f79ae0.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-11-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月11日18.1M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了美国、韩国、新加坡、欧洲、加拿大、香港、日本等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-04-10">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-4-10-free-subscribe-node.htm" class="xcblog-blog-url">
@@ -352,66 +412,6 @@
                                     这一次的节点更新覆盖了日本、香港、美国、欧洲、韩国、新加坡、加拿大等地区,最高速度可达19.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-25">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-3-25-node-share.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 3月25日19.6M/S|免费VPN/SSR/Clash/V2ray/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/8d67d6a7bd5b99658b08a2aefb0804ae.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-3-25-node-share.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 3月25日19.6M/S|免费VPN/SSR/Clash/V2ray/Shadowrocket免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了欧洲、加拿大、美国、韩国、日本、新加坡、香港等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-24">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-3-24-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 3月24日18.1M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/aa3ddc9bff6fda25db17c202e775086f.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-3-24-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 3月24日18.1M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了欧洲、韩国、新加坡、日本、加拿大、美国、香港等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-23">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-3-23-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 3月23日20.1M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享" src="/uploads/20241222-1/321988b62eb0968a443ca3848a3f071f.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-3-23-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 3月23日20.1M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了韩国、日本、香港、加拿大、美国、新加坡、欧洲等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-22">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-3-22-free-v2ray.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 3月22日21.7M/S|免费VPN/V2ray/Shadowrocket/SSR/Clash免费节点订阅分享" src="/uploads/20241222-1/ae775f129fc26565e44171425f168292.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-3-22-free-v2ray.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 3月22日21.7M/S|免费VPN/V2ray/Shadowrocket/SSR/Clash免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了新加坡、韩国、加拿大、欧洲、美国、香港、日本等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                                             </div>
                 </div>
                 <div class="col-md-3">
@@ -421,16 +421,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-70525.htm" title="动物疫苗品牌排名（动物疫苗品牌排名前十名）">动物疫苗品牌排名（动物疫苗品牌排名前十名）</a></li>
-                        <li class="py-2"><a href="/news/article-89954.htm" title="开宠物店累不累人（一般开宠物店挣不挣）">开宠物店累不累人（一般开宠物店挣不挣）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-4-clash-v2ray-ss-ssr.htm" title="VPN设备 | 3月4日20.7M/S|免费VPN/SSR/Shadowrocket/Clash/V2ray免费节点订阅分享">VPN设备 | 3月4日20.7M/S|免费VPN/SSR/Shadowrocket/Clash/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-73821.htm" title="长春宠物医院排名（长春良心的宠物医院）">长春宠物医院排名（长春良心的宠物医院）</a></li>
                         <li class="py-2"><a href="/news/article-66660.htm" title="用Pandas 处理大数据的3种超级方法">用Pandas 处理大数据的3种超级方法</a></li>
-                        <li class="py-2"><a href="/news/article-80627.htm" title="宠物美容师多少钱一个月上海（上海宠物美容师培训）">宠物美容师多少钱一个月上海（上海宠物美容师培训）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-22-free-v2ray.htm" title="VPN设备 | 3月22日21.7M/S|免费VPN/V2ray/Shadowrocket/SSR/Clash免费节点订阅分享">VPN设备 | 3月22日21.7M/S|免费VPN/V2ray/Shadowrocket/SSR/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-16-free-v2ray.htm" title="VPN设备 | 3月16日23M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享">VPN设备 | 3月16日23M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-66026.htm" title="宠物店一般卖几个月的猫 宠物店一般卖几个月的猫咪">宠物店一般卖几个月的猫 宠物店一般卖几个月的猫咪</a></li>
-                        <li class="py-2"><a href="/news/article-72483.htm" title="python内置函数有哪些？">python内置函数有哪些？</a></li>
+                        <li class="py-2"><a href="/news/article-70522.htm" title="哪些属相不适合养狗狗（哪些属相不能养狗狗）">哪些属相不适合养狗狗（哪些属相不能养狗狗）</a></li>
+                        <li class="py-2"><a href="/news/article-84166.htm" title="1970年农历四月二十是什么星座（1970年阴历四月二十是什么星座）">1970年农历四月二十是什么星座（1970年阴历四月二十是什么星座）</a></li>
+                        <li class="py-2"><a href="/news/article-77891.htm" title="合肥哪里领养宠物狗（合肥哪里领养宠物狗比较好）">合肥哪里领养宠物狗（合肥哪里领养宠物狗比较好）</a></li>
+                        <li class="py-2"><a href="/news/article-89235.htm" title="常见 几种 git操作代码回退的方法">常见 几种 git操作代码回退的方法</a></li>
+                        <li class="py-2"><a href="/news/article-89236.htm" title="Apache Hudi 如何加速传统的批处理模式">Apache Hudi 如何加速传统的批处理模式</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-19-free-subscribe-node.htm" title="VPN设备 | 3月19日21.3M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享">VPN设备 | 3月19日21.3M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-7-free-high-speed-nodes.htm" title="VPN设备 | 3月7日18.1M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享">VPN设备 | 3月7日18.1M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-95917.htm" title="动物防疫站***需要什么 动物防疫站***需要什么证件">动物防疫站***需要什么 动物防疫站***需要什么证件</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-6-clash-v2ray-ss-ssr.htm" title="VPN设备 | 4月6日21.1M/S|免费VPN/Clash/SSR/Shadowrocket/V2ray免费节点订阅分享">VPN设备 | 4月6日21.1M/S|免费VPN/Clash/SSR/Shadowrocket/V2ray免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -442,7 +442,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">42</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
