--- a/client.htm
+++ b/client.htm
@@ -278,16 +278,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-91378.htm" title="动物疫苗管理法律法规最新文件 动物疫苗管理法律法规最新文件是什么">动物疫苗管理法律法规最新文件 动物疫苗管理法律法规最新文件是什么</a></li>
-                        <li class="py-2"><a href="/news/article-67292.htm" title="有限体积法求解一维非稳态对流扩散方程">有限体积法求解一维非稳态对流扩散方程</a></li>
+                        <li class="py-2"><a href="/news/article-76527.htm" title="如何使用线程池执行定时任务？">如何使用线程池执行定时任务？</a></li>
+                        <li class="py-2"><a href="/news/article-92893.htm" title="猫粮狗粮生产加工（猫粮狗粮生产加工工艺）">猫粮狗粮生产加工（猫粮狗粮生产加工工艺）</a></li>
+                        <li class="py-2"><a href="/news/article-92174.htm" title="成都宠物领养平台公众号（成都市宠物狗领养平台）">成都宠物领养平台公众号（成都市宠物狗领养平台）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-6-clash-v2ray-ss-ssr.htm" title="VPN设备 | 4月6日21.1M/S|免费VPN/Clash/SSR/Shadowrocket/V2ray免费节点订阅分享">VPN设备 | 4月6日21.1M/S|免费VPN/Clash/SSR/Shadowrocket/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-71828.htm" title="狗粮加工厂设备有哪些（狗粮加工厂需要什么手续）">狗粮加工厂设备有哪些（狗粮加工厂需要什么手续）</a></li>
+                        <li class="py-2"><a href="/news/article-91376.htm" title="一、重写了equals为什么还要重写hashcode">一、重写了equals为什么还要重写hashcode</a></li>
+                        <li class="py-2"><a href="/news/article-73153.htm" title="宠物粮食专卖店电话多少啊（宠物粮基地）">宠物粮食专卖店电话多少啊（宠物粮基地）</a></li>
                         <li class="py-2"><a href="/news/article-75175.htm" title="读取spring的配置来定义常量">读取spring的配置来定义常量</a></li>
-                        <li class="py-2"><a href="/news/article-76529.htm" title="新手开店适合开什么店小投资（新手开店适合开什么店小投资好）">新手开店适合开什么店小投资（新手开店适合开什么店小投资好）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-30-free-v2ray-subscribe.htm" title="VPN设备 | 3月30日18.2M/S|免费VPN/Shadowrocket/Clash/V2ray/SSR免费节点订阅分享">VPN设备 | 3月30日18.2M/S|免费VPN/Shadowrocket/Clash/V2ray/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-31-free-node-subscribe-links.htm" title="VPN设备 | 3月31日21.8M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享">VPN设备 | 3月31日21.8M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-7-clash-v2ray-ss-ssr.htm" title="VPN设备 | 4月7日20.2M/S|免费VPN/V2ray/SSR/Shadowrocket/Clash免费节点订阅分享">VPN设备 | 4月7日20.2M/S|免费VPN/V2ray/SSR/Shadowrocket/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-67295.htm" title="Halo 开源项目学习评论与点赞">Halo 开源项目学习评论与点赞</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-5-free-v2ray-subscribe.htm" title="VPN设备 | 4月5日18.1M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享">VPN设备 | 4月5日18.1M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-10-free-subscribe-node.htm" title="VPN设备 | 4月10日18.7M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享">VPN设备 | 4月10日18.7M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-13-free-node-subscribe-links.htm" title="VPN设备 | 4月13日19.9M/S|免费VPN/Shadowrocket/Clash/SSR/V2ray免费节点订阅分享">VPN设备 | 4月13日19.9M/S|免费VPN/Shadowrocket/Clash/SSR/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-72485.htm" title="动物免疫接种前应做哪些准备工作（动物免疫接种要注意什么）">动物免疫接种前应做哪些准备工作（动物免疫接种要注意什么）</a></li>
                     </ul>
     </div>
 </div>
@@ -299,7 +299,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">42</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
