--- a/date/2025-03/page-6.htm
+++ b/date/2025-03/page-6.htm
@@ -273,16 +273,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-79953.htm" title="动物医院在哪个位置好一点（动物医院价目表）">动物医院在哪个位置好一点（动物医院价目表）</a></li>
-                        <li class="py-2"><a href="/news/article-80627.htm" title="宠物美容师多少钱一个月上海（上海宠物美容师培训）">宠物美容师多少钱一个月上海（上海宠物美容师培训）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-10-free-subscribe-node.htm" title="VPN设备 | 4月10日18.7M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享">VPN设备 | 4月10日18.7M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-22-free-v2ray.htm" title="VPN设备 | 3月22日21.7M/S|免费VPN/V2ray/Shadowrocket/SSR/Clash免费节点订阅分享">VPN设备 | 3月22日21.7M/S|免费VPN/V2ray/Shadowrocket/SSR/Clash免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-3-9-free-v2ray.htm" title="VPN设备 | 3月9日18.4M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享">VPN设备 | 3月9日18.4M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-76529.htm" title="新手开店适合开什么店小投资（新手开店适合开什么店小投资好）">新手开店适合开什么店小投资（新手开店适合开什么店小投资好）</a></li>
+                        <li class="py-2"><a href="/news/article-82032.htm" title="宠物粮食加工厂好做吗知乎文章怎么写 宠物粮食加工厂好做吗知乎文章怎么写的">宠物粮食加工厂好做吗知乎文章怎么写 宠物粮食加工厂好做吗知乎文章怎么写的</a></li>
+                        <li class="py-2"><a href="/news/article-77205.htm" title="宠物粮食店铺名称怎么取 宠物粮食店铺名称怎么取好听">宠物粮食店铺名称怎么取 宠物粮食店铺名称怎么取好听</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-4-clash-v2ray-ss-ssr.htm" title="VPN设备 | 4月4日19.8M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享">VPN设备 | 4月4日19.8M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-3-25-node-share.htm" title="VPN设备 | 3月25日19.6M/S|免费VPN/SSR/Clash/V2ray/Shadowrocket免费节点订阅分享">VPN设备 | 3月25日19.6M/S|免费VPN/SSR/Clash/V2ray/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-7-clash-v2ray-ss-ssr.htm" title="VPN设备 | 4月7日20.2M/S|免费VPN/V2ray/SSR/Shadowrocket/Clash免费节点订阅分享">VPN设备 | 4月7日20.2M/S|免费VPN/V2ray/SSR/Shadowrocket/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-31-free-node-subscribe-links.htm" title="VPN设备 | 3月31日21.8M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享">VPN设备 | 3月31日21.8M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/news/article-76527.htm" title="如何使用线程池执行定时任务？">如何使用线程池执行定时任务？</a></li>
-                        <li class="py-2"><a href="/news/article-73820.htm" title="领养宠物狗的流程图（领养宠物须知）">领养宠物狗的流程图（领养宠物须知）</a></li>
+                        <li class="py-2"><a href="/news/article-75176.htm" title="动物疫苗运输注意事项及要求是什么（动物疫苗接种的注意事项包括有哪些内容）">动物疫苗运输注意事项及要求是什么（动物疫苗接种的注意事项包括有哪些内容）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-14-free-v2ray.htm" title="VPN设备 | 4月14日18.5M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 4月14日18.5M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-12-node-share.htm" title="VPN设备 | 3月12日19.1M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享">VPN设备 | 3月12日19.1M/S|免费VPN/SSR/Clash/Shadowrocket/V2ray免费节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -294,7 +294,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">42</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
