--- a/free-nodes/page-2.htm
+++ b/free-nodes/page-2.htm
@@ -109,6 +109,66 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-04">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-4-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月4日19.8M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享" src="/uploads/20241222-1/5f167ecea9a0c5eda7bc8fa7798e5773.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-4-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月4日19.8M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了新加坡、加拿大、韩国、日本、美国、香港、欧洲等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-03">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-3-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月3日20.9M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享" src="/uploads/20241222-1/410b34121b845fee70063f582f79928f.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-3-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月3日20.9M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、韩国、香港、欧洲、日本、美国、新加坡等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-02">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-2-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月2日21.6M/S|免费VPN/SSR/V2ray/Clash/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/9e2b225d869222c8f450f1935366fea1.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-2-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月2日21.6M/S|免费VPN/SSR/V2ray/Clash/Shadowrocket免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、新加坡、美国、加拿大、韩国、香港、日本等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-01">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-1-free-v2ray.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月1日22.4M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享" src="/uploads/20241222-1/a6739d732704eaa23f08687f69677fcf.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-1-free-v2ray.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月1日22.4M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、美国、加拿大、香港、韩国、欧洲、新加坡等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-03-31">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-3-31-free-node-subscribe-links.htm" class="xcblog-blog-url">
@@ -199,68 +259,8 @@
                                     这一次的节点更新覆盖了日本、香港、美国、欧洲、韩国、新加坡、加拿大等地区,最高速度可达19.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-25">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-3-25-node-share.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 3月25日19.6M/S|免费VPN/SSR/Clash/V2ray/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/8d67d6a7bd5b99658b08a2aefb0804ae.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-3-25-node-share.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 3月25日19.6M/S|免费VPN/SSR/Clash/V2ray/Shadowrocket免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了欧洲、加拿大、美国、韩国、日本、新加坡、香港等地区,最高速度可达19.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-24">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-3-24-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 3月24日18.1M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/aa3ddc9bff6fda25db17c202e775086f.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-3-24-free-v2ray-subscribe.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 3月24日18.1M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了欧洲、韩国、新加坡、日本、加拿大、美国、香港等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-23">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-3-23-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 3月23日20.1M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享" src="/uploads/20241222-1/321988b62eb0968a443ca3848a3f071f.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-3-23-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 3月23日20.1M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了韩国、日本、香港、加拿大、美国、新加坡、欧洲等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-22">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-3-22-free-v2ray.htm" class="xcblog-blog-url">
-                                    <img alt="VPN设备 | 3月22日21.7M/S|免费VPN/V2ray/Shadowrocket/SSR/Clash免费节点订阅分享" src="/uploads/20241222-1/ae775f129fc26565e44171425f168292.webp" class="img-responsive">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-3-22-free-v2ray.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        VPN设备 | 3月22日21.7M/S|免费VPN/V2ray/Shadowrocket/SSR/Clash免费节点订阅分享                                    </h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了新加坡、韩国、加拿大、欧洲、美国、香港、日本等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                         
-                        <ul class="pagination"><li><a href="/free-nodes/">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li class="active"><span>2</span></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li> <li><a href="/free-nodes/page-3.htm">&raquo;</a></li></ul>                    </div>
+                        <ul class="pagination"><li><a href="/free-nodes/">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li class="active"><span>2</span></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li> <li><a href="/free-nodes/page-3.htm">&raquo;</a></li></ul>                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -269,16 +269,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-73153.htm" title="宠物粮食专卖店电话多少啊（宠物粮基地）">宠物粮食专卖店电话多少啊（宠物粮基地）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-1-free-v2ray.htm" title="VPN设备 | 4月1日22.4M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享">VPN设备 | 4月1日22.4M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-66660.htm" title="用Pandas 处理大数据的3种超级方法">用Pandas 处理大数据的3种超级方法</a></li>
-                        <li class="py-2"><a href="/news/article-92172.htm" title="3.	Springmvc架构">3.	Springmvc架构</a></li>
-                        <li class="py-2"><a href="/news/article-79953.htm" title="动物医院在哪个位置好一点（动物医院价目表）">动物医院在哪个位置好一点（动物医院价目表）</a></li>
-                        <li class="py-2"><a href="/news/article-68547.htm" title="InnoDB的逻辑存储结构是什么，表空间组成包括哪些？_在线工具">InnoDB的逻辑存储结构是什么，表空间组成包括哪些？_在线工具</a></li>
-                        <li class="py-2"><a href="/news/article-87755.htm" title="同安宠物领养中心在哪里啊最近（同安哪里有宠物店的地方）">同安宠物领养中心在哪里啊最近（同安哪里有宠物店的地方）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-31-free-node-subscribe-links.htm" title="VPN设备 | 3月31日21.8M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享">VPN设备 | 3月31日21.8M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-3-node-share.htm" title="VPN设备 | 3月3日18M/S|免费VPN/V2ray/Shadowrocket/SSR/Clash免费节点订阅分享">VPN设备 | 3月3日18M/S|免费VPN/V2ray/Shadowrocket/SSR/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-67295.htm" title="Halo 开源项目学习评论与点赞">Halo 开源项目学习评论与点赞</a></li>
+                        <li class="py-2"><a href="/news/article-66661.htm" title="开动物医院什么资质可以开药（开动物医院什么资质可以开药店）">开动物医院什么资质可以开药（开动物医院什么资质可以开药店）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-5-free-v2ray-subscribe.htm" title="VPN设备 | 4月5日18.1M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享">VPN设备 | 4月5日18.1M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-71831.htm" title="做梦梦见办喜事是什么意思（做梦梦见办喜事是什么意思呀）">做梦梦见办喜事是什么意思（做梦梦见办喜事是什么意思呀）</a></li>
+                        <li class="py-2"><a href="/news/article-82742.htm" title="宠物领养条约（宠物领养条约内容）">宠物领养条约（宠物领养条约内容）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-9-free-v2ray.htm" title="VPN设备 | 3月9日18.4M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享">VPN设备 | 3月9日18.4M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-22-free-v2ray.htm" title="VPN设备 | 3月22日21.7M/S|免费VPN/V2ray/Shadowrocket/SSR/Clash免费节点订阅分享">VPN设备 | 3月22日21.7M/S|免费VPN/V2ray/Shadowrocket/SSR/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-71828.htm" title="狗粮加工厂设备有哪些（狗粮加工厂需要什么手续）">狗粮加工厂设备有哪些（狗粮加工厂需要什么手续）</a></li>
+                        <li class="py-2"><a href="/news/article-87754.htm" title="宠物店亏本了怎么办（现在宠物店生意亏死）">宠物店亏本了怎么办（现在宠物店生意亏死）</a></li>
+                        <li class="py-2"><a href="/news/article-69207.htm" title="华畜兽药是哪个公司的（华畜兽药可排第几名）">华畜兽药是哪个公司的（华畜兽药可排第几名）</a></li>
+                        <li class="py-2"><a href="/news/article-71162.htm" title="简单聊一聊Vue3组件更新过程_vue.js">简单聊一聊Vue3组件更新过程_vue.js</a></li>
                     </ul>
     </div>
 </div>
@@ -290,7 +290,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">42</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
